--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,4 +9,5 @@ add_executable(Solved main.cpp)
 
 add_executable(P2010 Luogu/P2010/P2010.cpp)
 add_executable(P2058 Luogu/P2058/P2058.cpp)
+add_executable(P2822 Luogu/P2822/P2822.cpp)
 add_executable(P7911 Luogu/P7911/P7911.cpp)
